# PDFStudio

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.bat  canvas.py  email_sign.py  main.py  ocr.py  pdf_engine.py  pdf_studio.spec  pyproject.toml  requirements.txt  signature.py
