[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-studio"
version = "2.0.0"
description = "Free, open-source Acrobat-style PDF editor — view, annotate, edit, sign, OCR, and send for signature."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PDF Studio Contributors"},
]
keywords = ["pdf", "editor", "acrobat", "sign", "ocr", "pyqt6", "document"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Multimedia :: Graphics :: Viewers",
]
dependencies = [
    "PyQt6>=6.6.0",
    "PyMuPDF>=1.24.0",
    "Pillow>=10.0.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]
crypto = ["endesive>=2.17.0"]
all = ["pytesseract>=0.3.10", "endesive>=2.17.0"]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[project.scripts]
pdf-studio = "main:main"

[project.urls]
Homepage = "https://github.com/podolskygabriel/PDFStudio"
Repository = "https://github.com/podolskygabriel/PDFStudio"
Issues = "https://github.com/podolskygabriel/PDFStudio/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
